# mafia-online-backend

./: .gitignore  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: players.py  rooms.py
app/schemas/: __init__.py  players.py  rooms.py
app/services/: players.py  rooms.py
