[project]
name = "mafia-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.7",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 100

target-version = "py313"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.format]
quote-style = "double"

indent-style = "space"